--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
     "express-graphql": "^0.6.12",
-    "graphql": "^0.13.1"
+    "graphql": "^0.13.1",
+    "mongoose": "^5.9.15"
   }
 }
